--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                 <li class="nav-item">
                     <a href="https://github.com/jabernardo/calf/archive/master.tar.gz">Download</a>
                 </li>
+								<li class="nav-item">
+										<a href="/">Developer</a>
+								</li>
             </ul>
             
             <h2>Introduction</h2>
